--- a/views/About.html
+++ b/views/About.html
@@ -23,49 +23,25 @@
 </head>
 
 <body>
-    <!-- Navigation -->
-    <div class="navbar" id="navbarText">
-        <img id="icon" href="#" src="../images/cross.png"/>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="About.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                </svg> About Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="Services.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-building" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"/>
-                    <path d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"/>
-                </svg> Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="ContactUs.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
-                    <path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                </svg> Contact Us</a>
-            </li>
-        </ul>
-        <span class="navbar-text">
-      Here to help those in need.
-    </span>
-    </div>
-    <div class="nav-scroller bg-white shadow-sm">
-        <nav class="nav nav-underline"></nav>
-    </div>
-
-
+<!-- Navigation -->
 <div class="container-fluid" style="padding-top: 2%">
 
     <!-- Left Column -->
     <div class="col-sm-9">
 
-        <!-- List-Group Panel -->
+        <!-- Bio Panel -->
         <div class="card">
             <div class="card-header p-b-0">
                 <h5 class="card-title"><i class="fa fa-random" aria-hidden="true"></i>Biography</h5>
-            </div>
-            <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action">Pictures</a>
+                <div class="list-group list-group-flush">
+                    <a href="#" class="list-group-item list-group-item-action"></a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu fugiat nulla pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum.</p>
+                </div>
             </div>
         </div>
 
@@ -73,11 +49,23 @@
         <div class="card">
             <div class="card-header p-b-0">
                 <h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i>About us</h5>
-
             </div>
-            <form>
 
-            </form>
+            <div class="card-block">
+                <p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p></p>
+            </div>
+        </div>
+
+        <!-- RSS feed Panel -->
+        <div class="card">
+            <div class="card-header p-b-0">
+                <h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i>News/Updates</h5>
+            </div>
             <div class="card-block">
                 <p><button class="btn btn-secondary">RSS feed</button></p>
             </div>
@@ -89,151 +77,123 @@
 
 
 
-    <!-- Right Column -->
-    <div class="col-sm-3">
 
-        <!-- Form -->
-        <div class="card">
-            <div class="card-header p-b-0">
-                <h5 class="card-title">
-                    <i class="fa fa-sign-in" aria-hidden="true"></i>
-                    Log In
-                </h5>
+    <div id="side-carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#side-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#side-carousel" data-slide-to="1"></li>
+            <li data-target="#side-carousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <a href="#">
+                    <img class="img-responsive" src="images/home/1church.jpg" alt="">
+                </a>
+                <div class="carousel-caption">
+                    <h3>A...</h3>
+                    <p>Description A</p>
+                </div>
             </div>
-            <div class="card-block">
-                <form>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="uid" name="uid" placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Password">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Log In</button>
-                </form>
+            <div class="carousel-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/home/church2.jpg" alt="">
+                </a>
+                <div class="carousel-caption">
+                    <h3>B...</h3>
+                    <p>Description B.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/home/3church.jpg" alt="">
+                </a>
+                <div class="carousel-caption">
+                    <h3>C...</h3>
+                    <p>Description C.</p>
+                </div>
             </div>
         </div>
 
-        <!-- Progress Bars -->
-        <div class="card">
-            <div class="card-header p-b-0">
-                <h5 class="card-title">
-                    <i class="fa fa-tachometer" aria-hidden="true"></i>
-                    Support Resources Available
-                </h5>
-            </div>
-            <div class="card-block">
-                <div class="text-xs-center" id="progress-caption-1">Rent Assistance &hellip; 100%</div>
-                <progress class="progress progress-success" value="100" max="100" aria-describedby="progress-caption-1"></progress>
-                <div class="text-xs-center" id="progress-caption-2">General/Other Assistance &hellip; 80%</div>
-                <progress class="progress progress-info" value="80" max="100" aria-describedby="progress-caption-2"></progress>
-                <div class="text-xs-center" id="progress-caption-3">Food Assistance &hellip; 45%</div>
-                <progress class="progress progress-warning" value="45" max="100" aria-describedby="progress-caption-3"></progress>
-                <div class="text-xs-center" id="progress-caption-4"> Individuals In Need Helped &hellip; 35%</div>
-                <progress class="progress progress-danger" value="35" max="100" aria-describedby="progress-caption-4"></progress>
-            </div>
-        </div>
-
-        <!-- Carousel -->
-        <!-- 			<h4><i class="fa fa-language" aria-hidden="true"></i></h4>-->
-        <div id="side-carousel" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#side-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#side-carousel" data-slide-to="1"></li>
-                <li data-target="#side-carousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <a href="#">
-                        <img class="img-responsive" src="images/home/1church.jpg" alt="">
-                    </a>
-                    <div class="carousel-caption">
-                        <h3>A...</h3>
-                        <p>Description A</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <a href="#">
-                        <img class="img-responsive" src="images/home/church2.jpg" alt="">
-                    </a>
-                    <div class="carousel-caption">
-                        <h3>B...</h3>
-                        <p>Description B.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <a href="#">
-                        <img class="img-responsive" src="images/home/3church.jpg" alt="">
-                    </a>
-                    <div class="carousel-caption">
-                        <h3>C...</h3>
-                        <p>Description C.</p>
-                    </div>
-                </div>
-            </div>
-            <a class="left carousel-control" href="#side-carousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#side-carousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
 
     </div>
 
 </div>
 
-<div class="footer-blurb">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3 footer-blurb-item">
-                <h3><i class="fa fa-text-height" aria-hidden="true"></i> 1</h3>
-                <p> Description.</p>
-                <p><a class="btn btn-primary" href="#">Procrastinate</a></p>
-            </div>
-            <div class="col-sm-3 footer-blurb-item">
-                <h3><i class="fa fa-wrench" aria-hidden="true"></i> 2</h3>
-                <p>Description </p>
-                <p><a class="btn btn-success" href="#">Unleash</a></p>
-            </div>
-            <div class="col-sm-3 footer-blurb-item">
-                <h3><i class="fa fa-paperclip" aria-hidden="true"></i> 3</h3>
-                <p> Description.</p>
-                <p><a class="btn btn-primary" href="#">Complete</a></p>
-            </div>
-            <div class="col-sm-3 footer-blurb-item">
-
-            </div>
 
 
-        </div>
-    </div>
+<div class="navbar" id="navbarText">
+    <!-- Cross Image that navigates to Home page -->
+    <img id="icon" alt="cross" src="../images/cross.png" onClick="location.href='../index.html'"/>
+
+    <ul class="navbar-nav mr-auto">
+        <!-- Home Section -->
+        <li class="nav-item">
+            <a class="nav-link" href="../index.html">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5
+                                  1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                    <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8
+                                2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+                </svg> Home</a>
+        </li>
+
+        <!-- About Us Section -->
+        <li class="nav-item">
+            <a class="nav-link" href="About.html">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314
+                                  4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542
+                                  6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8
+                                  15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1
+                                  .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                </svg> About Us</a>
+        </li>
+
+        <!-- Services Section -->
+        <li class="nav-item">
+            <a class="nav-link" href="Services.html">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-building" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0
+                                  0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1
+                                  .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1
+                                  .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"/>
+                    <path d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2
+                                0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2
+                                0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"/>
+                </svg> Services</a>
+        </li>
+
+        <!-- Contact Us Section -->
+        <li class="nav-item">
+            <a class="nav-link" href="ContactUs.html">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0
+                            0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+                    <path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                </svg> Contact Us</a>
+        </li>
+    </ul>
+
+    <span class="navbar-text">
+                  Here to help those in need.
+                </span>
 </div>
 
 <div class="small-print">
     <div class="container">
-        <p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
-
-
-
-
+        <p id="bottom"><a href="#" style="color: black">Terms &amp; Conditions</a> | <a href="#" style="color: black">Privacy Policy</a> | <a href="#" style="color: black">Contact</a></p>
+        <small>24447 94th Ave. S Kent, WA 98030</small>
     </div>
-    <button class="open-button" onclick="openForm()">Administrator Portal</button>
 
-    <div class="form-popup" id="myForm">
-        <form action="/action_page.php" class="form-container">
-            <h1>Login</h1>
 
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
 
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
-
-            <button type="submit" class="btn">Login</button>
-            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-        </form>
 
     </div>
 
